React rewrite: Implemented changes to prevent animated wrap-adjustment on toolbox resize  - this still needs work, the animated resize still isn't great. The "render" function call interferes with the window resizing, and would be better happening later. Objects appear 'in space'

--- a/react-pgt/src/PaneColourPots.css
+++ b/react-pgt/src/PaneColourPots.css
@@ -57,7 +57,7 @@ table.WgTable table.CpotCellBlock {
 
 .PaneColourPots > table.CpotCellBlock{
     position: absolute;
-top: 129px;
+top: 17px;
 right: 14px;
 }
 
